<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Thu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Thu"/>
        <item
            android:id="@+id/nav_chi"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_chi" />
        <item
            android:id="@+id/nav_thongke"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_thongke" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
    <item android:title="Giới Thiệu">
        <menu>
            <item
                android:id="@+id/nav_GioiThieu"
                android:icon="@drawable/ic_menu_camera"
                android:title="Giới Thiệu" />
            <item
                android:id="@+id/nav_Thoat"
                android:icon="@drawable/ic_menu_camera"
                android:title="Thoát" />
        </menu>
    </item>
</menu>