<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.asm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.asm.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.asm.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_chi"
        android:name="com.example.asm.ui.chi.ChiFragment"
        android:label="Quản lý Khoản chi"
        tools:layout="@layout/fragment_chi" />
    <fragment
        android:id="@+id/nav_Thu"
        android:name="com.example.asm.ui.thu.ThuFragment"
        android:label="Quản lý thu"
        tools:layout="@layout/fragment_thu" />
    <fragment
        android:id="@+id/nav_GioiThieu"
        android:name="com.example.asm.ui.gioithieu.GioiThieuFragment"
        android:label="Giới thiệu ứng dụng"
        tools:layout="@layout/fragment_gioi_thieu" />
    <fragment
        android:id="@+id/nav_thongke"
        android:name="com.example.asm.ui.thongke.ThongKeFragment"
        android:label="Thống kê các khoản thu chi"
        tools:layout="@layout/fragment_thong_ke" />
    <fragment
        android:id="@+id/nav_Thoat"
        android:name="com.example.asm.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" />
</navigation>